--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,14 @@
 
 plugins {
     id 'java'
+    id 'war'
 }
+
+apply from:'custom.gradle'
 
 group 'sergey'
 
+version = 1
 sourceCompatibility = 1.8
 
 repositories {
@@ -23,62 +27,16 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 }
 
-classes.doLast() {
-    
-    def stringGreeting = file('src/main/resources/greeting.txt').getText()
-    if(stringGreeting.contains('ver.')){
-        String[] versionArray = stringGreeting.split('ver.')
-        version = versionArray[1]   
-        println("Версия сборки : " + version)
-    }else {
-        version = 1
-        file('src/main/resources/greeting.txt').text = stringGreeting +' '+'ver.1'
-    }
+ /**
+ *  Create task to populate greetings.txt file with version (in build folder, not in src folder, always
+ * included in build flow)
+ */
+
+classes.doLast {
+        file('src/main/resources/greeting.txt').text = buildVersion
+        ant.move file: "src/main/resources/greeting.txt",
+                todir: "${buildDir}/resources/main/"
 }
 
-class IncrementalTask extends DefaultTask {
-    @InputDirectory
-    def File inputDir
-
-    @OutputDirectory
-    def File outputDir
-
-    @Input
-    def inputProperty
-
-    @TaskAction
-    void execute(IncrementalTaskInputs inputs) {
-        inputs.outOfDate { change ->
-            println "out of date: ${change.file.name}"
-            def targetFile = new File(outputDir, change.file.name)
-            targetFile.text = change.file.text.toString()
-        }
-    }
-}
-
-task incrementalUpdate(type: IncrementalTask) {
-
-    // In this part code i parsin text in .txt
-
-    String s = file('src/main/resources/greeting.txt').getText()
-
-    if(s.contains('ver.')) {
-        println(s)
-        String[] versionArray = s.split("ver.")
-        int versionNumber = versionArray[1] as Integer
-        int increment = versionNumber + 1  // inkrement
-        println(versionArray[0] + " split " + versionArray[1] + "eeeee" + increment)
-        println(versionNumber)
-        
-        file('src/main/resources/greeting.txt').text = versionArray[0] + 'ver.' + increment
-    }
-
-    println("incrementalReversedfdbdfbdfb")
-    inputDir = file('src/main/resources/')
-    outputDir = file("$buildDir/build/resourses/main/greeting.txt")
-    inputProperty = project.properties['taskInputProperty'] ?: 'original'
-    println("incrementalReversedfdbdfbdfb")
-
-}
 
 
