--- a/custom.gradle
+++ b/custom.gradle
@@ -9,3 +9,23 @@ task incrementVersion() {
         file('gradle.properties').text = "buildVersion = " + newVersion
     }
 }
+
+/**
+ *  Task for publish in nexus
+ */
+
+publishing {
+    publications {
+        myLibrary(MavenPublication) {
+            from components.web
+        }
+    }
+
+    repositories {
+        maven {
+            name = 'maven-central'
+            url = "http://192.168.0.45:8081/repository/maven-releases/"
+        }
+    }
+}
+
