My mystake with Gradle code.

--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,6 @@ dependencies {
  */
 
 classes.doLast {
-        file('src/main/resources/greeting.txt').text = buildVersion
-        ant.move file: "src/main/resources/greeting.txt",
-                 todir: "${buildDir}/resources/main/"
+    file('build/resources/main/greeting.txt').text = "Ver. = " + buildVersion
 }
 
